# funcs

funcs/: pyproject.toml
funcs/funcs/: get.py  index_of.py  slice.py
funcs/tests/: test_funcs.py
stars/: pyproject.toml
stars/stars/: get_value.py
stars/tests/: test_get_value.py
