[tool.poetry]
name = "funcs"
version = "0.1.0"
description = ""
authors = ["yanochkina_sl <yanochkinasvetlana@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
